# imageObjects

./: .gitignore  CMakeLists.txt  README.md  setup.py
Examples/: Examples.ipynb  Tests.py
Examples/.ipynb_checkpoints/: Examples-checkpoint.ipynb
UnitTests/: UnitTest.cpp  UnitTest.py  readme.md
imageObjects/: ContourObject.py  ImageMaker.py  ImageObject.py  LineObject.py  PolySupport.py  __init__.py  common.py  image_maker.py
imageObjects/Support/: __init__.py  _alter_array.py  _create_as_image.py  _extract_from_image.py  _misc.py
src/: ImageObject.cpp  ImageObject.h
